test/parallel/sync/diten/doubleSyncVarDecl.good
doubleSyncVarDecl.chpl:2: error: only one level of sync is allowed
